--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -8,7 +8,7 @@
       <!--pageContent-->
       <div class="navbar">
         <div class="container">
-          <a href="index.html" class="navbar-brand d-flex align-items-center"
+          <a routerLink="'/'" class="navbar-brand d-flex align-items-center"
             ><img src="assets/images/common/logo.png" alt=""
           /></a>
           <div class="top-nav">
@@ -25,18 +25,7 @@
             <div class="top-menu">
               <app-sidenav></app-sidenav>
             </div>
-            <ul class="navigation nav-user">
-              <li>
-                <a routerLinkActive="active" routerLink="about" class="info-btn"><i class="fc-info dark"></i></a>
-              </li>
-              <li>
-                <a href="#" class="profile-btn fc-user"
-                  ><img
-                    src="assets/images/common/user-profile.png"
-                    alt="user image"
-                /></a>
-              </li>
-            </ul>
+            <app-right-top-bar></app-right-top-bar>
           </div>
         </div>
       </div>
